--- a/game.html
+++ b/game.html
@@ -4,6 +4,6 @@
 	</head>
 	<body style="margin:0; padding: 0;">
 		<a href="">재시작</a>
-		<object data="assets/main.swf" type="application/x-shockwave-flash" width="800" height="600"></object>
+		<object data="assets/main_v2.swf" type="application/x-shockwave-flash" width="800" height="600"></object>
 	</body>
 </html>
