--- a/index.html
+++ b/index.html
@@ -33,14 +33,16 @@
 	<article class="container" style="width: 800px;">
 		<header style="margin: 50px 0;">
 			<h1>아타리 도루</h1>
-			<p>버그가 고쳐지지 않은 얼리윈터 버전입니다.</p>
+			<p>20160101 <strike>버그가 고쳐지지 않은 얼리윈터 버전입니다.</strike></p>
+			<p>20160102 치명적인 버그가 해결된 버전입니다.</p>
 		</header>
 		<section>
 			<h4>개요</h4>
 			<p>아타리에서 발매한 E.T.를 <a href="http://cafe.naver.com/sdbx">샌드박스</a> 버전으로 패러디한 작품입니다.</p>
 			<p>본 게임에 존재하는 모든 버그는 어디까지나 원작 재현에 충실했음을 미리 밝힙니다.</p>
-			<p>전설카드를 만드려는 도루가 셧다운제에 걸리기 전까지 1600가루를 모아야하는 게임입니다.</p>
-			<p>1분 이내에 모든 굴을 확인해 전설카드를 만드세요!</p>
+			<p>이 게임은 돌겜충 도루가 전설카드를 만들기 위해 모험을 떠나는 이야기 입니다.</p>
+			<p>한국 계정으로 이전한 불쌍한 도루가 셧다운제에 걸리기 전까지 1600가루를 모아서 전설 카드를 만드세요!</p>
+			<p>제한시간은 1분입니다</p>
 		</section>
 		<section>
 			<h4>음원</h4>
